# Zephyr-DUT-Master

./: .gitignore  README.md  project_presentation.html
DUT_Master/: CMakeLists.txt  prj.conf
DUT_Master/boards/: blackpill_f401cc.overlay
DUT_Master/include/: tb_motorsim.h  tb_pinmap.h
DUT_Master/src/: dc_motor_math_params.c  main.c  tb_adc.c  tb_cmds.c  tb_gpio.c  tb_motorsim.c  tb_pinmap.c  tb_pwm.c  tb_spi.c  tb_uart.c
DUT_Master/src/dc_motor/: dc_motor_math.c  dc_motor_math.h  dc_motor_math_private.h  dc_motor_math_types.h  rtwtypes.h
host/: Makefile  README.md  motorsim_monitor_script.py  motorsim_monitor_wayland.py  requirements.txt
host/ZephyrShellLib/: __init__.py  fixture_loader.py  motorsim_keywords.py  peripheral_keywords.py  transport.py
host/fixture/: sensor_board_fixture.yaml
host/tests/: adc_tests.robot  gpio_tests.robot  motorsim_tests.robot  pwm_tests.robot  soak_tests.robot  spi_tests.robot  test_lib_unit.py  uart_tests.robot
host/tests/resources/: patterns_gpio.resource  patterns_power.resource  patterns_uart.resource  testbench.resource
host/tests_unit/: test_lib_unit.py
tests/: adc_tests.robot  gpio_tests.robot  motor_closed_loop_test.robot  motorsim_tests.robot  pwm_tests.robot  spi_tests.robot
tests/resources/: testbench.resource
